--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp": "^4.0.2",
     "gulp-cssnano": "^2.1.3",
     "gulp-group-css-media-queries": "^1.2.2",
+    "gulp-image": "^5.1.0",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2"
   },
